# RUST_DCS

./: .env  .gitignore  README.md  data_recorder.py  dwsim.dwxmz  dwsim.py  mono_crash.f4b067ce5.0.json  mono_crash.f4b067ce5.1.json  telemetry_data.csv
backend/: .env  Cargo.toml
backend/src/: main.rs  serial.rs
influxdb-thingsboard-bridge/: Cargo.toml
laporan/: compile.sh  laporan.aux  laporan.bbl  laporan.blg  laporan.out  laporan.tex  laporan.toc  references.bib
sht20/: Cargo.toml  flash.sh  monitor.sh  sdkconfig.defaults
sht20/src/: config.rs  main.rs
