[package]
name = "influxdb-thingsboard-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = "0.24"
serde_json = "1.0"
serialport = "4.3"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
